<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddReminderActivity">

    <LinearLayout
        android:id="@+id/LLadd_reminder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top | center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/reminder_info"/>

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_title_input"/>

        <EditText
            android:id="@+id/body_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_text_input"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <Button
            android:id="@+id/picker_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_picker"/>

        <CheckBox
            android:id="@+id/alarm_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/frequency_help"/>

            <RadioGroup
                android:id="@+id/frequency_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:checkedButton="@id/FG_once">
                <RadioButton
                    android:id="@+id/FG_once"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/once"/>
                <RadioButton
                    android:id="@+id/FG_daily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily"/>
            </RadioGroup>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_submit"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>